# RL

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  add_new_tokens.py  build.sh  codecov.yml  compare_with_ido.py  convert_job.sub  deepscaler_reproduce.sh  default_runtime_env.yaml  eval.sh  launch_model.sh  mypy.ini  patch-vllm-with-ssm-fix.sh  pyproject.toml  pyrefly.toml  ray.sub  ray_new.sub  run.sh  run_dsv2_local.sh  run_dsv3_local.sh  run_dsv3_medium_local.sh  run_jobs.py  submit.sh  te.py  te.sh  temp.sh  test.py  test_te_installed_correctly.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _automodel_integration_check.yml  _healthcheck_vm.yml  _pr_comment.yml  _run_test.yml  _submodule_check.yml  automodel-submodule-checks.yml  build-test-publish-wheel.yml  cherry-pick-release-commit.yml  cicd-main.yml  community-bot.yml  copyright-check.yml  healthcheck_vms.yml  labeler.yaml  merge-queue-retry.yml  pr-checks-comment.yml  release-freeze.yml  release.yaml  semantic-pull-request.yml
docker/: Dockerfile  Dockerfile.ngc_pytorch  README.md
docs/: Makefile  adding-new-models.md  adding_new_models.md  autodoc2_docstrings_parser.py  cluster.md  conf.py  debugging.md  docker.md  documentation.md  fp8.md  helpers.py  index.md  local-workstation.md  local_workstation.md  model-quirks.md  nsys-profiling.md  project.json  pyproject.toml  testing.md  versions1.json
docs/about/: performance-summary.md
docs/design-docs/: chat-datasets.md  checkpointing.md  design-and-philosophy.md  fsdp2-parallel-plan.md  generation.md  gpu-logger.md  index.md  logger.md  loss-functions.md  loss_functions.md  padding.md  sequence-packing-and-dynamic-batching.md  supported-backends.md  training-backends.md  uv.md
docs/design_docs/: chat_datasets.md  checkpointing.md  design_and_philosophy.md  generation.md  logger.md  padding.md  uv.md
docs/guides/: async-grpo.md  dapo.md  deepseek.md  dpo.md  environments.md  eval.md  grpo-deepscaler.md  grpo-sliding-puzzle.md  grpo.md  index.md  prorlv2.md  rm.md  sft-openmathinstruct2.md  sft.md  use-custom-vllm.md
examples/: convert_dcp_to_hf.py  convert_format_bfcl.py  convert_format_code.py  convert_format_math.py  custom_parallel.py  hf_import.py  llama4_refit.py  run_bppo_math.py  run_distillation_math.py  run_dpo.py  run_eval.py  run_eval_math.py  run_eval_sft.py  run_eval_with_planted_thinking.py  run_eval_with_stats.py  run_grpo.py  run_grpo_deepscaler.py  run_grpo_ifeval.py  run_grpo_math.py  run_grpo_math_speculative.py  run_grpo_math_tools.py  run_grpo_rm.py  run_grpo_sliding_puzzle.py  run_majority_at_k.py  run_quack_math.py  run_rm.py  run_sft.py  run_vlm_grpo.py  serve_ray_vllm.py  stress_test_model.py
examples/configs/: async_grpo_math_1B.yaml  async_grpo_math_8B.yaml  async_grpo_math_qwen30ba3b.yaml  async_grpo_math_qwen30ba3b_megatron.yaml  base.yaml  bppo-deepscaler-1.5b-8K.yaml  bppo_math_1B.yaml  bppo_math_7B.yaml  distillation_math.yaml  distillation_math_megatron.yaml  dpo.yaml  eval.yaml  eval_gpqa.yaml  grpo-deepscaler-1.5b-16K.yaml  grpo-deepscaler-1.5b-24K.yaml  grpo-deepscaler-1.5b-8K.yaml  grpo-deepscaler-1.5b-8K_source.yaml  grpo.yaml  grpo_1B.yaml  grpo_deepscaler-1.5b-24K.yaml  grpo_ifeval_1B.yaml  grpo_length_control.yaml  grpo_llm_judge_async_config.yaml  grpo_math_14B.yaml  grpo_math_1B.yaml  grpo_math_1B_debug.yaml  grpo_math_1B_dtensor.yaml  grpo_math_1B_megatron.yaml  grpo_math_1B_megatron_debug.yaml  grpo_math_1B_megatron_sp_debug.yaml  grpo_math_1B_seq_pack.yaml  grpo_math_1B_sp_debug.yaml  grpo_math_235B_megatron.yaml  grpo_math_32B.yaml  grpo_math_32B_megatron.yaml  grpo_math_70B_megatron.yaml  grpo_math_8B.yaml  grpo_math_8B_megatron.yaml  grpo_math_8B_megatron_fp8.yaml  grpo_math_dsv3_megatron.yaml  (+51 more)
examples/converters/: convert_megatron_to_hf.py
examples/llama_nemotron/: data_processors.py  run_llama_nemotron_grpo.py
examples/prompts/: cot2.txt  cot_llm_tokens.txt  cot_nano_system.txt  critic.txt  gpqa.txt  math_tools_prompt.txt  math_tools_system.txt  sys.txt
examples/r1/: grpo_qwen_7b.yaml  mathcl.py  run_grpo_qwen7b.py
launch_scripts/: 8b_math.sh  launch_script.sh  qwen-1b_math.sh
local_packages/pylatexenc-2.10.dist-info/: RECORD
nemo__placeholder/: __init__.py  package_info.py
nemo_reinforcer/: __init__.py  package_info.py
nemo_reinforcer/algorithms/: dpo.py  grpo.py  interfaces.py  loss_functions.py  sft.py  utils.py
nemo_reinforcer/data/: __init__.py  datasets.py  interfaces.py  llm_message_utils.py
nemo_reinforcer/distributed/: batched_data_dict.py  collectives.py  named_sharding.py  virtual_cluster.py  worker_groups.py
nemo_reinforcer/environments/: interfaces.py  math_environment.py  utils.py
nemo_reinforcer/evals/: eval.py
nemo_reinforcer/experience/: rollouts.py
nemo_reinforcer/models/: interfaces.py
nemo_reinforcer/utils/: checkpoint.py  config.py  git_info.py  logger.py  (+6 more)
nemo_rl/: __init__.py  package_info.py
script/: 1b.sh  235b.sh  2node_slrum.sh  30b.sh  30b_sync.sh  30b_temp.sh  32b.sh  4node_async.sh  5node_async.sh  70b.sh  conv_8b_megatron.sh  dsv3.sh  interactive.sh  qwen_dtensor.sh  qwen_script.sh  script.sh  script_sync.sh
scripts/: convert_ckpt.sh  run_gpqa.sh  run_sft.sh
tests/: README.md  analyze_cot_lenghts.ipynb  check_metrics.py  eval_aime_math_gpqa.sh  json_dump_tb_logs.py  nir_scripts.txt  run_batch.sh  run_batch_gpqa_nano_large_context.sh  run_batch_grpo_nano_large_context.sh  run_batch_grpo_nano_large_context_aggressive_L1.sh  run_functional_in_docker.sh  run_grpo_math_nano.py  run_unit.sh  run_unit_in_docker.sh
tools/: autoformat.sh  bisect-script.sh  build-custom-vllm.sh  build-flash-attn-in-uv-cache.sh  code_snapshot.sh  config_cli.py  copy_tbevent_maybe_redact.py  copyright.sh  find_available_port_ranges.py  launch  package_release_runs.sh  refit_verifier.py
xp/: eval_launcher.py  eval_launcher_README.md  eval_sweep_example.yaml  launcher.py  launcher_README.md
(+625 files in other folders)
